# rust-05

./: Cargo.toml  README.md  cliff.toml  question.md
chat-core/: Cargo.toml
chat-core/src/: lib.rs
chat-core/src/util/: jwt.rs
chat-server/: Cargo.toml
chat-server/src/: config.rs  error.rs  lib.rs  main.rs
chat-server/src/handler/: auth.rs
chat-server/src/models/: mod.rs  user.rs  workspaces.rs
chat-test/: Cargo.toml
fixtures/: privkey.pem  pubkey.pem
