[workspace]
members = ["chat-core", "chat-server", "chat-test", "notify-server"]
resolver = "2"
[workspace.dependencies]
chat-core = { path = "./chat-core" }
anyhow = "1.0.86"
jwt-simple = "0.12.9"
axum = {version ="0.7.5",features =["http2","query","tracing","multipart"]}
axum-extra = "0.9.3"
chrono = {version="0.4.38",features=["serde"]}
serde = {version="1.0.203",features=["derive"]}
serde_yaml ="0.9.34"
sqlx = {version= "0.7.4",features=["postgres","runtime-tokio","tls-rustls","chrono"]}
thiserror = "1.0.59"
tokio = {version="1.38.0",features = ["rt", "rt-multi-thread", "macros"]}
tower = "0.4.13"
tower-http = {version="0.5.2",features = [
  "compression-full",
  "fs",
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
