[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow={workspace=true}
axum = {workspace=true}
jwt-simple ={workspace= true}
axum-extra = {workspace=true}
chrono = {workspace=true}
serde = {workspace=true}
sqlx = {workspace=true}
tokio = {workspace=true}
tower = {workspace=true}
tower-http = {workspace=true}
tracing = {workspace=true}
utoipa = {version="4.2.3",features=["axum_extras"]}
